2007-06-08  Adrian Schuur

	* cimcClientSfcbLocal.c, providerDrv.c:
	Fixed: 1732774: random provider segfaults when using local client interface

2007-05-31  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c:
	Fixed 1732080: sfcb ignores property filter in getInstance upcalls

2007-06-04  Tyrel Datwyler <tyreld@us.ibm.com>

    * classProvider.c
    Fixed 1730553: createClass fails in standard classProvider

2007-05-31  Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, cimcClientSfcbLocal.c, providerMgr.c, brokerUpc.c,
	array.c, cimXmlParser.c:
	Fixed 1728904: problem with dateTime Values

2007-05-25  Sven Schuetz <sven@de.ibm.com>

	* interopProvider.c:
	Fixed 1725608 default state of subscription state should be enabled

2007-05-23  Tyrel Datwyler <tyreld@us.ibm.com>

    * classProvider.c objectImpl.c objectImpl.h
    Fixed 1724753: qualifier creation support for classes

2007-05-23  Tyrel Datwyler <tyreld@us.ibm.com>

    * constClass.c
    Fixed 1724719: constClass leaks memory
    
2007-05-23  Sven Schuetz <sven@de.ibm.com>

	* indCIMXMLExport.c, fileRepository.c:
	Fixed 1724370: sfcb can run out of file handles

2007-05-11  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c:
	Fixed 1717262: sfcb might not properly return the hostname for some calls

2007-05-08  Sven Schuetz <sven@de.ibm.com>

	* cimXmlOps.y, cimXmlParser.c:
	Fixed 1663641: parser doesn't accept empty IPARAMVALUE

2007-05-04  Sven Schuetz <sven@de.ibm.com>

	* cimXmlOps.y, cimXmlParser.c, cimXmlRequest.c:
	Fixed 1712545: wrong results in association operations
	
	* cimXmlParser.c:
	Fixed 1712582: parser does not accept type attribute in KEYVALUE tag
	
2007-05-02  Sven Schuetz <sven@de.ibm.com>

	* queryStatement.c:
	Fixed 1711283: minor mem problem in qsRelease

2007-04-27  Adrian Schuur

	* support.c, support.h, providerRegister.c, providerRegister.h,
	providerDrv.c:
	New feature 1708578: Execution time parameters for providers

2007-04-27  Sven Schuetz <sven@de.ibm.com>
