@@ -37,7 +37,7 @@
 #include "queryOperation.h"
 
 extern CMPIValue *getKeyValueTypePtr(char *type, char *value, XtokValueReference *ref,
-                              CMPIValue * val, CMPIType * typ);
+                              CMPIValue * val, CMPIType * typ, char *scopingNS);
 extern CMPIValue str2CMPIValue(CMPIType type, XtokValue val, XtokValueReference *ref, char *ns);
 extern int value2xml(CMPIData d, UtilStringBuffer * sb, int wv);
 extern int instanceName2xml(CMPIObjectPath * cop, UtilStringBuffer * sb);
